--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import 'node_modules/modern-normalize/modern-normalize.css';
 
-body {}
+body {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+}
 
 a {
   text-decoration: none;
