--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@ body {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 14px;
+
+  background-color: var(--color-white);
 }
 
 a {
