fix bag bg-image for section Hero

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -9,6 +9,7 @@
         linear-gradient(rgba(0, 0, 0, 0.2),
             rgba(0, 0, 0, 0.2)),
         url("../../images/hero/bg-desktop.jpg");
+    background-size: cover;
 }
 
 .container {
