--- a/src/components/TruckItem/TruckItem.module.css
+++ b/src/components/TruckItem/TruckItem.module.css
@@ -87,3 +87,11 @@
     left: 0;
     background-color: var(--color-crimson);
 }
+
+.truckTabsContent {
+    padding-top: 44px;
+    padding-bottom: 80px;
+
+    display: flex;
+    column-gap: 40px;
+}
