render rating review

--- a/src/components/TruckReviews/TruckReviews.module.css
+++ b/src/components/TruckReviews/TruckReviews.module.css
@@ -50,6 +50,10 @@
     fill: var(--color-light-gray);
 }
 
+.acceptFill {
+    fill: var(--color-amber);
+}
+
 .comment {
     font-size: 16px;
     line-height: 1.5;
