add calendar for bookingDate

--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,10 @@ fieldset {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.react-datepicker-wrapper,
+.react-datepicker__input-container,
+.react-datepicker__input-container input {
+  display: block;
+  width: 100%;
+}
