fixbug with reviews section

--- a/src/components/TruckReviews/TruckReviews.module.css
+++ b/src/components/TruckReviews/TruckReviews.module.css
@@ -1,5 +1,5 @@
 .reviewsWrapper {
-    max-width: 631px;
+    flex-basis: 631px;
     display: flex;
     flex-direction: column;
     row-gap: 44px;
